tests/errors/subroutine1.f90
program subroutine1
integer :: i
call bpe()

contains

subroutine bpe()
bpe = 1
end subroutine
end program